# Fastapi_zero

./: pyproject.toml
fast_zero/: app.py
tests/: test_app.py
